--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
       <div class="logo">
         <img src="imgs/logo.png" />
-        <h1>Delicious</h1>
-        <h2>The best food blog on the web</h2>
+        <h2>Delicious</h2>
+        <h3>The best food blog on the web</h3>
       </div>
 
       <div class="social">
@@ -23,11 +23,13 @@
           <li><a heref="#"><img src="imgs/flic-icon.png" alt="flicker icon"></a></li>
           <li><a heref="#"><img src="imgs/pint-icon.png" alt="pintrest icon"></a></li>
 
-        </ul>
-        <ul>
-          <li><a heref="#"><img src="imgs/rss-icon.png" alt="rss"></a></li>
+          <li class="ml"><a heref="#"><img src="imgs/rss-icon.png" alt="rss"></a></li>
           <li><a heref="#"><img src="imgs/mail-icon.png" alt="email"></a></li>
+
         </ul>
+
+
+
 
       </div>
       <!-- this is the divider in the header -->
@@ -37,56 +39,36 @@
 
     <main>
 
-      <h2>Chocolate Pizza</h2>
-      <p>Posted on 15 Dec 2013/Desserts</p>
+      <h1>Chocolate Pizza</h1>
+      <h3>Posted on 15 Dec 2013/Desserts</h3>
 
-      <a href="#"><img src="imgs/print-icon.png" alt="print"></a>
+      <div class="print">
+        <a href="#"><img src="imgs/print-icon.png" alt="print"></a>
+        <p>print</p>
+      </div>
 
-      <img src="imgs/choco-pizza.png" alt="Picture of chocolate pizza">
+      <img src="imgs/choco-pizza.png" alt="Picture of chocolate pizza" width="960">
 
       <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nulla suscipit accusantium repellendus a
-          doloremque perferendis molestiae iure placeat. Libero ea temporibus consequuntur deserunt inventore ratione
-          alias atque dolor doloremque commodi voluptatibus animi reiciendis sapiente, maiores expedita aut qui
-          perspiciatis totam, neque accusamus et quos harum tenetur. Dolorum iure ad quod? Consequatur reprehenderit,
-          dignissimos nulla aliquam perspiciatis unde ad maiores sequi vero! Reiciendis minus aliquam harum maiores
-          assumenda praesentium similique, ex nesciunt nulla exercitationem sequi tempore mollitia magnam ducimus dolor,
-          voluptas placeat! Odit beatae deleniti dolores numquam tenetur deserunt sapiente nemo odio maxime sit labore,
-          molestiae vero et est incidunt.</p>
+        <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve
+          all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring
+          frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool
+          completely.</p>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam atque tempora, in numquam suscipit,
-          corrupti, consequuntur corporis a eligendi quis ipsum. Nam dolor sed dolore nemo a, distinctio ad et incidunt.
-          Dolores commodi, odio porro quos quo dolor, quaerat adipisci rerum sed nam eveniet eligendi in ducimus
-          similique iusto culpa fugiat accusantium aliquam voluptatem laborum dolorem non ad. Neque, ut nihil tenetur
-          reprehenderit illum in error deleniti earum sequi perferendis provident expedita qui quos temporibus.</p>
+        <p> Ice cream: In a small pot over medium heat, combine milk and granulated sugar until sugar is completely
+          dissolved and milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in fridge and wait until the
+          fig mixtures is cooled.</p>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptas ab maxime nisi natus perferendis
-          odio aperiam dolorem ipsum illo tempora asperiores, dolor ea eius vero aliquid fugit, minima sunt consequuntur
-          exercitationem tenetur ratione! Aperiam dolorum ducimus doloremque ratione nulla inventore impedit architecto
-          adipisci quo non error eos culpa, quod fugit eum consequatur quis aliquam! Veniam praesentium esse dolore
-          quaerat dolores! Aliquam, provident eos? Repellat dolores officia amet exercitationem cum iure! Dolorum
-          voluptates tenetur dicta veritatis, consequuntur expedita molestiae repellat perferendis temporibus earum,
-          quidem optio, magni vitae similique alias sint.</p>
+        <p> Using an ice cream, machine, pour liquids into the frozen basin and process according to manufacturer
+          instructions,i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the
+          nuts.
+          Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass Tupperware. Freeze
+          for at least two hours before serving.</p>
 
       </article>
 
-      <div>
-        <ol>
-          <li>1 1/2 cups milk</li>
-          <li>1/2 cup mascarpone</li>
-          <li>1/2 tsp pink salt</li>
-          <li>1 lb Black Mission Figs</li>
-          <li>1/2 cup brown sugar</li>
-          <li>2-4 tbsp water</li>
-        </ol>
-        <ol>
-          <li>1 1/2 cups heavy cream</li>
-          <li class="strikeout">1/3 granulated sugar</li>
-          <li class="strikeout">2 egg yolks</li>
-          <li>1 lemon juiced</li>
-          <li>2 tbsp butter</li>
-          <li>1 cup honey roasted pecans, roughly <br> chopped</li>
-        </ol>
+      <div class="list">
+
       </div>
 
 
@@ -94,12 +76,19 @@
 
     <footer>
       <!-- page seperation -->
-      <div></div>
+      <div class="break"></div>
       <img src="imgs/van-pic.png" alt="Vanessa Stevenson">
       <h3>Vanessa Stevenson</h3>
-      <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am</p>
+      <p class="x">Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am</p>
 
-      <div>SHARE RECIPE</div>
+      <div>
+        <p> SHARE RECIPE</p>
+      </div>
+
+      <img class="smallimg" src="imgs/small-logo.png" alt="">
+      <hr>
+
+      <p class="x">Delicious &#169 </p>
 
 
     </footer>
